--- a/templates/include/homepage.html
+++ b/templates/include/homepage.html
@@ -60,6 +60,8 @@
 <script src="{% static 'assets/js/ScrollTrigger.min.js' %}"></script>
 <script src="{% static 'assets/js/bootstrap-datepicker.js' %}"></script>
 <script src="{% static 'assets/js/main.js' %}"></script>
+<script src="{% static 'assets/js/language_switch.js' %}"></script>
+
 
 </body>
 
