--- a/templates/base/contact-dark.html
+++ b/templates/base/contact-dark.html
@@ -1,43 +1,6 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <!-- ========== Meta Tags ========== -->
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Restan - Food & Restaurant HTML Template ">
-
-    <!-- ========== Page Title ========== -->
-    <title>Restan - Food & Restaurant HTML Template </title>
-
-    <!-- ========== Favicon Icon ========== -->
-    <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
-
-    <!-- ========== Start Stylesheet ========== -->
-    <link href="assets/css/bootstrap.min.css" rel="stylesheet">
-    <link href="assets/css/font-awesome.min.css" rel="stylesheet">
-    <link href="assets/css/magnific-popup.css" rel="stylesheet">
-    <link href="assets/css/flaticon-set.css" rel="stylesheet">
-    <link href="assets/css/swiper-bundle.min.css" rel="stylesheet">
-    <link href="assets/css/animate.min.css" rel="stylesheet">
-    <link href="assets/css/bootstrap-datepicker3.css" rel="stylesheet">
-    <link href="assets/css/validnavs.css" rel="stylesheet">
-    <link href="assets/css/helper.css" rel="stylesheet">
-    <link href="assets/css/unit-test.css" rel="stylesheet">
-    <link href="assets/css/shop.css" rel="stylesheet">
-    <link href="assets/css/style.css" rel="stylesheet">
-    <link href="style.css" rel="stylesheet">
-    <!-- ========== End Stylesheet ========== -->
-
-    <!--[if lte IE 9]>
-        <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-    <![endif]-->
-
-</head>
-
-<body class="bg-dark">
+{% load static %}
+{% block content %}
+{% include 'include/header.html'%}
 
     <!-- Start Header Top 
     ============================================= -->
@@ -479,176 +442,9 @@
 
     <!-- Start Footer 
     ============================================= -->
-    <footer>
-        <div class="container">
-            <div class="footer-style-one bg-dark text-light">
+    {% include 'include/footer.html'%}
 
-                <div class="row">
-                    <!-- Singel Item -->
-                    <div class="col-lg-3 col-md-6 footer-item mt-50">
-                        <div class="f-item about">
-                            
-                            <h4 class="widget-title">About Us</h4>
-                            <p>
-                                Continued at zealously necessary is Surrounded sir motionless she end literature. Gay direction neglected.
-                            </p>
-
-                            <ul class="footer-social">
-                                <li>
-                                    <a href="#">
-                                        <i class="fab fa-facebook-f"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fab fa-twitter"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fab fa-youtube"></i>
-                                    </a>
-                                </li>
-                                <li>
-                                    <a href="#">
-                                        <i class="fab fa-linkedin-in"></i>
-                                    </a>
-                                </li>
-                            </ul>
-                    
-                        </div>
-                    </div>
-                    <!-- End Singel Item -->
-
-                    <!-- Singel Item -->
-                    <div class="col-lg-3 col-md-6 mt-50 footer-item pl-50 pl-md-15 pl-xs-15">
-                        <div class="f-item link">
-                            <h4 class="widget-title">Explore</h4>
-                            <ul>
-                                <li>
-                                    <a href="about-us.html">Compnay Profile</a>
-                                </li>
-                                <li>
-                                    <a href="about-us.html">About</a>
-                                </li>
-                                <li>
-                                    <a href="contact-us.html">Help Center</a>
-                                </li>
-                                <li>
-                                    <a href="contact-us.html">Career</a>
-                                </li>
-                                <li>
-                                    <a href="about-us.html">Features</a>
-                                </li>
-                                <li>
-                                    <a href="contact-us.html">Contact</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Singel Item -->
-
-                    <!-- Singel Item -->
-                    <div class="col-lg-3 col-md-6 footer-item  mt-50">
-                        <div class="f-item contact">
-                            <h4 class="widget-title">Contact Info</h4>
-                            <ul>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-map-marker-alt"></i>
-                                    </div>
-                                    <div class="content">
-                                        175 10h Street, Office 375 Berlin, De 21562
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-phone"></i>
-                                    </div>
-                                    <div class="content">
-                                        <a href="tel:2151234567">+123 34598768</a> <br> <a href="tel:2151234567">+554 34598734</a>
-                                    </div>
-                                </li>
-                                <li>
-                                    <div class="icon">
-                                        <i class="fas fa-envelope"></i>
-                                    </div>
-                                    <div class="content">
-                                        <a href="mailto:name@email.com">food@restan.com</a>
-                                    </div>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                    <!-- End Singel Item -->
-
-                    <!-- Singel Item -->
-                    <div class="col-lg-3 col-md-6 footer-item mt-50">
-                        <h4 class="widget-title">Newsletter</h4>
-                        <p>
-                            Join our subscribers list to get the latest news and special offers.
-                        </p>
-                        <div class="f-item newsletter">
-                            <form action="#">
-                                <input type="email" placeholder="Your Email" class="form-control" name="email">
-                                <button type="submit"> <i class="fas fa-arrow-right"></i></button>  
-                            </form>
-                        </div>
-                        <fieldset>
-                            <input type="checkbox" id="privacy" name="privacy">
-                            <label for="privacy">I agree to the Privacy Policy</label>
-                        </fieldset>
-                    </div>
-                    <!-- End Singel Item -->
-
-
-                </div>
-            </div>
-        </div>
-            
-        <!-- Footer Bottom -->
-        <div class="footer-bottom text-light">
-            <div class="footer-bottom-shape">
-                <img src="assets/img/shape/9.png" alt="Image Not Found">
-            </div>
-            <div class="container">
-                <div class="row">
-                    <div class="col-lg-6">
-                        <div class="footer-logo">
-                            <img src="assets/img/logo-light.png" alt="Logo">
-                        </div>
-                    </div>
-                    <div class="col-lg-6 text-end">
-                        <p>
-                            © Copyright 2024 Restan. All Rights Reserved
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </div>
-        <!-- End Footer Bottom -->
-    </footer>
-    <!-- End Footer -->
-    
-    <!-- jQuery Frameworks
-    ============================================= -->
-    <script src="assets/js/jquery-3.6.0.min.js"></script>
-    <script src="assets/js/bootstrap.bundle.min.js"></script>
-    <script src="assets/js/jquery.appear.js"></script>
-    <script src="assets/js/swiper-bundle.min.js"></script>
-    <script src="assets/js/progress-bar.min.js"></script>
-    <script src="assets/js/isotope.pkgd.min.js"></script>
-    <script src="assets/js/imagesloaded.pkgd.min.js"></script>
-    <script src="assets/js/magnific-popup.min.js"></script>
-    <script src="assets/js/count-to.js"></script>
-    <script src="assets/js/jquery.nice-select.min.js"></script>
-    <script src="assets/js/jquery.scrolla.min.js"></script>
-    <script src="assets/js/YTPlayer.min.js"></script>
-    <script src="assets/js/validnavs.js"></script>
-    <script src="assets/js/gsap.js"></script>
-    <script src="assets/js/ScrollTrigger.min.js"></script>
-    <script src="assets/js/bootstrap-datepicker.js"></script>
-    <script src="assets/js/main.js"></script>
 
 </body>
 </html>
+{% endblock %}
